--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <!-- Welcome to Blind Dev -->
+    <h1>Remove me and start coding!</h1>
     <script src="js/app.js"></script>
   </body>
 </html>
