visual assets, getting ready for today!

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blind Dev _ Alpha 0.1</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
     <!-- Foundation or Bootstrap? Choose the way. -->
     <link rel="stylesheet" href="css/foundation.css">
-    <!-- nois3 chooses Foundation :P -->
+    <!-- nois3 choose Foundation :P -->
     <!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <!-- Welcome to Blind Dev -->
-    <h1>Remove me and start coding!</h1>
+    
     <script src="js/app.js"></script>
   </body>
 </html>
