--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    
+    <h1>HELLO WORLD... REMOVE THIS LINK AND START CODING!</h1>
     <script src="js/app.js"></script>
   </body>
 </html>
